<resources>
    <string name="app_name">Facebook Clone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_account">Create New Account</string>
    <string name="or">or</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="mobile_number_or_email_address">Mobile number or email address</string>
    <string name="facebook">Facebook</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="user_name">Name</string>
    <string name="gender">Gender</string>
    <string name="email_address">Email address</string>
    <string name="mobile_number">Mobile number</string>
    <string name="create_account">Create account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dob">DOB</string>
    <string name="enter">Enter</string>
    <string name="select">Select</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="mobile_number_digits_warning">Please enter 10 digit Mobile Number</string>
    <string name="email_address_warning">Please enter a valid Email address</string>
    <string name="fill_all_details">Please fill all details</string>
</resources>