<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/facebook"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/textColor"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#707050"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/mobile_number_or_email_address"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="3dp"
    android:layout_marginHorizontal="5dp"
    android:paddingVertical="3dp"
    android:textSize="17sp"
    android:textColor="@color/textColor"
    />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:background="#C1C1C1"
        android:layout_marginTop="3dp"
        android:layout_marginHorizontal="5dp"
        android:padding="8dp"
/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:paddingVertical="5dp"
        android:text="@string/password"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="3dp"
        android:textColor="@color/textColor"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:background="#C1C1C1"
        android:layout_marginHorizontal="5dp"
        android:padding="8dp"
         />


    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/button"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="17sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotten_password"
        android:layout_marginVertical="3dp"
        android:paddingVertical="5dp"
        android:layout_marginHorizontal="5dp"
        android:textSize="17sp"
        android:textColor="@color/button"
        />


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="15dp"
    >
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="#C2C2C2"
        android:layout_marginStart="8dp"/>

    <!-- "or" text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:paddingStart="8dp"
        android:paddingEnd="8dp" />

    <!-- Right line -->
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="#C1C1C1"
        android:layout_marginEnd="8dp"/>
</LinearLayout>

    <Button
        android:id="@+id/buttonCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:background="#1C8E36"
        android:text="@string/create_new_account"
        android:paddingHorizontal="7dp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

</LinearLayout>
