<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:background="@color/design_default_color_on_primary"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/facebook"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#707050"
            app:layout_constraintTop_toBottomOf="@id/title_text" />

        <TextView
            android:id="@+id/username_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp"
            android:paddingVertical="3dp"
            android:text="@string/user_name"
            android:textColor="@color/text_color_bold"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/empty_view" />

        <LinearLayout
            android:id="@+id/username_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/username_title">

            <EditText
                android:id="@+id/first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:background="#C1C1C1"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:background="#C1C1C1"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black" />

        </LinearLayout>

        <TextView
            android:id="@+id/dob_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="3dp"
            android:paddingVertical="5dp"
            android:text="@string/date_of_birth"
            android:textColor="@color/text_color_bold"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_container" />

        <TextView
            android:id="@+id/dob_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:background="#C1C1C1"
            android:padding="8dp"
            android:textColor="@color/textColor"
            app:layout_constraintTop_toBottomOf="@id/dob_title" />

        <TextView
            android:id="@+id/gender_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp"
            android:paddingVertical="3dp"
            android:text="@string/gender"
            android:textColor="@color/text_color_bold"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dob_text" />

        <EditText
            android:id="@+id/gender_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="3dp"
            android:background="#C1C1C1"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/gender_title" />

        <TextView
            android:id="@+id/email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp"
            android:paddingVertical="3dp"
            android:text="@string/email_address"
            android:textColor="@color/text_color_bold"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gender_edittext" />

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="3dp"
            android:background="#C1C1C1"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/email_title" />

        <TextView
            android:id="@+id/mobileno_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp"
            android:paddingVertical="3dp"
            android:text="@string/mobile_number"
            android:textColor="@color/text_color_bold"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_edittext" />

        <EditText
            android:id="@+id/mobileno_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="3dp"
            android:background="#C1C1C1"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/mobileno_title" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="4dp"
            android:background="@color/button"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/mobileno_edittext" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>